[package]
name = "obkv"
version = "0.3.1"
description = "Optimized-bytes key and a value store"
repository = "https://github.com/Kerollmops/obkv"
documentation = "https://docs.rs/obkv"
authors = ["Kerollmops <clement@meilisearch.com>"]
license = "MIT"
categories = ["encoding", "database-implementations"]
keywords = ["lightweight", "key-value-store", "minimalist"]
edition = "2018"

[dev-dependencies]
quickcheck = "0.9.2"
